--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "speaker_exploit.c" "cod_helper.c" "avrcp_sniff.c"
+idf_component_register(SRCS "speaker_exploit.c" "cod_helper.c" "avrcp_sniff.c" "avrcp_util.c"
                     INCLUDE_DIRS ".")
