--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "speaker_exploit.c" "cod_helper.c" "avrcp_sniff.c"
+idf_component_register(SRCS "get_speaker_capabilities.c" "cod_helper.c" "avrcp_sniff.c"
                     INCLUDE_DIRS "."
                     REQUIRES bt nvs_flash)
