--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,8 @@
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.16)
 
+# Use custom partition table
+set(PARTITION_CSV_PATH ${CMAKE_CURRENT_LIST_DIR}/partitions.csv)
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(speaker_exploit)
