--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "dos_attack.c" "get_speaker_capabilities.c" "cod_helper.c" "avrcp_sniff.c"
+idf_component_register(SRCS "cod_helper.c" "dos_attack.c"
                     INCLUDE_DIRS "."
                     REQUIRES bt nvs_flash)
